[finish #91692440] JS to collapse tabbed menu items - fixed

--- a/app/assets/stylesheets/insurances.css.scss
+++ b/app/assets/stylesheets/insurances.css.scss
@@ -14,7 +14,7 @@
 }
 
 .insurance-edit-container{
-  margin: 0 auto;
+  margin: 47px auto;
   padding-top: 134px;
   width: 900px;
 }
